fixed typo in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@
 #                                 Main library                                #
 ###############################################################################
 [metadata]
-name = my_package
+name = face_segmentation_pytorch
 author = Andres Fernandez
 url = https://github.com/andres-fr/face_segmentation_pytorch
 description =  PyTorch implementation of YuvalNirkin/face_segmentation
